# gdnative-boilerplate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
gdnative/docker/: build.sh  docker-compose.yml  sconsb.sh
gdnative/src/godotlib/: CMakeLists.txt
gdnative/src/godotproject/: CMakeLists.txt  godotproject_init.cpp
gdnative/src/godotproject/controllers/: GameController.cpp  GameController.hpp
gdnative/src/godotproject/entity/: Projectile.cpp  Projectile.hpp
project/: project.godot
project/assets/tileset/: DungeonTileset.png.import
project/libs/: GameController.gdns  godotproject.gdnlib
project/scenes/: World.tscn  player.tscn  projectile.tscn
project/scripts/: world_script.gd
